@@ -12,5 +12,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_drop_shipment_delete_cancel">
             <field name="text">To delete drop shipment "%(shipment)s" you must cancel it.</field>
         </record>
+        <record model="ir.message" id="msg_move_split_drop">
+            <field name="text">To split move from drop shipment, you must use the split wizard.</field>
+        </record>
     </data>
 </tryton>
