@@ -9,6 +9,8 @@ depends:
     sale
     sale_supply
     stock
+extras_depend:
+    stock_split
 xml:
     stock.xml
     sale.xml
