@@ -1,3 +1,4 @@
+* Split customer moves when splitting supplier moves
 * Rename 'done' button to 'do'
 
 Version 7.0.0 - 2023-10-30
